--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
 	"env": {
-		"NEXT_PUBLIC_REST_API_ENDPOINT": "Put your api endpoint here"
+		"NEXT_PUBLIC_REST_API_ENDPOINT": "https://throttle-space-test.vercel.app/api"
 	},
 	"build": {
 		"env": {
-			"NEXT_PUBLIC_REST_API_ENDPOINT": "Put your api endpoint here"
+			"NEXT_PUBLIC_REST_API_ENDPOINT": "https://throttle-space-test.vercel.app/api"
 		}
 	}
 }
