--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "clean": "rimraf \"{.next,dist,build,out,node_modules}\"",
     "dev": "next dev",
+    "build-run": "next build && next start",
     "build": "next build",
     "start": "next start"
   },
