--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "7.48.2",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.5",
     "react-query": "3.39.3",
     "react-rating-stars-component": "2.2.3",
     "react-scroll": "1.9.0",
